@@ -7,6 +7,11 @@
     2. /var/cache/edb/world is now /var/lib/portage/world.
     3. /etc/portage/profile/virtuals is _USER_ configs only.
 
+  10 Nov 2004; Brian Harring <ferringb@gentoo.org> 
+  bin/ebuild-default-functions.sh, bin/affect-fakeroot-perms.sh:
+  Closing out bug where suid/sgid is wiped by chowning,
+  noticed a similar issue in affect-fakeroot-perms. (#56129)
+
   10 Nov 2004; Brian Harring <ferringb@gentoo.org> bin/ebuild.sh:
   Dropping all support for reloading env attributes from a .51 dump.
   It wasn't implemented correctly, and it's not worth the duct tape
